Minor Fixes added resume
added resume document and fixed typo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <p>Full-Stack Developer</p>
               <a href="https://github.com/Jortega23" target="_blank" class='social-link'><i class='fa fa-github-square fa-3x' id='github-link'></i></a>
               <a href="https://www.linkedin.com/in/jesus-codes/" target="_blank" class='social-link'><i class='fa fa-linkedin-square fa-3x'></i></a>
-              <a href="" target="_blank" class='social-link' id='resume-link'>Resume</a>
+              <a href="Jesus Ortega Tech 2020 Resume.docx" target="_blank" class='social-link' id='resume-link'>Resume</a>
           </div>
           <div class="img-wrapper">
             <img src="jesus.jpg" alt="self" class='myself'>
@@ -50,7 +50,7 @@
           </div>
           <div class="aboutme-info">
             <hr>
-            <p>I am a <strong> full-stack developer </strong> based out of San Diego, California. I have a passion for developing and design. I am able top build a web application from ground up while incorporating the many aspects that go into building and deploying a web application. I aim to write manageable, readable, and efficent code while incorporating best paractices. I am a hardworking, relaible, and optimistic individual who works well with others and in teams to drive towards problem solving and creativity. Along with my knowledge for web development I also have acquired an array of transferable skills like communication and quick critical thinking skills working in the healthcare industry, which are important to work and collaborate appropriately with other web developers.</p> 
+            <p>I am a <strong> full-stack developer </strong> based out of San Diego, California. I have a passion for developing and design. I am able to build a web application from ground up while incorporating the many aspects that go into building and deploying a web application. I aim to write manageable, readable, and efficent code while incorporating best paractices. I am a hardworking, relaible, and optimistic individual who works well with others and in teams to drive towards problem solving and creativity. Along with my knowledge for web development I also have acquired an array of transferable skills like communication and quick critical thinking skills working in the healthcare industry, which are important to work and collaborate appropriately with other web developers.</p> 
             <hr>
           </div>
         </div>
